--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.1",
     "react-spinners": "^0.13.8",
+    "resend": "^3.2.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
